@@ -70,6 +70,7 @@
     * 0659 domino_tasks: new check to monitor tasks on a lotus domino server via snmp
     * 1187 Hivemanager: Extended Check and Agent...
     * 1130 esx monitoring: agent_vsphere now retrieves additional data (used by HW-inventory)...
+    * 1422 agent_vsphere: now able to configure where the power state of a vm or esx-host should be assigned...
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
